# spark

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTEXT.md  MANIFEST.in  PLAN.md  README.md  SOUL.md  STRUCTURE.md  TASKS.md  package-lock.json  package.json  pyproject.toml  requirements.txt  spark  spark-server.spec
.claude/: launch.json
.claude/skills/: build-mac  build-mac.md  release-mac  release-mac.md
.codex/: hooks.json
.github/workflows/: python-quality.yml  web-quality.yml  web-supply-chain.yml  windows-desktop-beta.yml
docs/: AGENTS.md  README.md  checkpoints.md  cli-config.yaml.example  configuration.md  desktop-webview-diagnostics.md  editor-integration.md  git-worktrees.md  index.md  personality.md  sessions.md  web-dashboard.md
docs/adr/: 0001-preserve-prompt-caching-while-splitting-run-agent.md  0002-use-project-language-with-workspace-api-compatibility.md  0003-type-provider-runtime-boundaries.md  0004-split-web-dashboard-behind-compatible-entrypoints.md
docs/automate/: batch.md  cron.md  model-training.md  plugins.md
docs/building/: _category_.json  adding-platform-adapters.md  adding-providers.md  adding-tools.md  agent-loop.md  architecture.md  context-compression-and-caching.md  context-engine-plugin.md  creating-skills.md  cron-internals.md  editor-extension-internals.md  environments.md  extending-the-cli.md  gateway-internals.md  memory-provider-plugin.md  prompt-assembly.md  provider-runtime.md  session-storage.md  tools-runtime.md  trajectory-format.md
docs/chat-platforms/: _category_.json  bluebubbles.md  dingtalk.md  discord.md  email.md  feishu.md  homeassistant.md  index.md  matrix.md  mattermost.md  open-webui.md  qqbot.md  signal.md  slack.md  sms.md  telegram.md  webhooks.md  wecom-callback.md  wecom.md  weixin.md  whatsapp.md
docs/cli/: commands-reference.md  index.md  profiles.md  skins.md  slash-commands.md
docs/getting-started/: _category_.json  installation.md  learning-path.md  quickstart.md  updating.md
docs/guides/: author-skills.md  automate-with-cron.md  build-a-plugin.md  daily-briefing-bot.md  define-personality-with-soul.md  delegation-patterns.md  deploy-on-a-vps.md  deploy-to-a-slack-team.md  enable-voice-mode.md  goal-tracking.md  migrate-from-openclaw.md  optimize-costs.md  run-a-research-agent.md  run-local-llm.md  switch-profiles.md  team-telegram-assistant.md  tips-and-tricks.md  use-from-your-editor.md  use-mcp.md  use-python-library.md  webui-fake-streams.md
docs/integrations/: acp.md  api-server.md  index.md  providers.md  web-dashboard.md
docs/memory/: honcho-spec.md  honcho.md  index.md  providers.md
docs/migration/: openclaw.md
docs/plans/: 2026-03-16-pricing-accuracy-architecture-design.md
docs/providers/: credential-pools.md  fallback.md  index.md  routing.md
docs/reference/: environment-variables.md  faq.md  mcp-config-reference.md  tools-reference.md  toolsets-reference.md
docs/skills/: catalog.md  index.md  optional-catalog.md
docs/specs/: container-cli-review-fixes.md
docs/tools/: browser.md  code-execution.md  context-files.md  context-references.md  delegation.md  hooks.md  image-generation.md  index.md  mcp.md  vision.md
docs/voice/: tts.md  voice-mode.md
environments/: README.md  __init__.py  agent_loop.py  agentic_opd_env.py  patches.py  spark_base_env.py  tool_context.py  web_research_env.py
environments/spark_swe_env/: default.yaml  spark_swe_env.py
environments/terminal_test_env/: default.yaml  terminal_test_env.py
environments/tool_call_parsers/: __init__.py  longcat_parser.py  qwen_parser.py  spark_parser.py
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  cost.json  manifest.json
references/: phase-0-baseline-and-test-selectors.md  phase-2-workspace-language-inventory.md
scripts/: build_desktop.sh  build_desktop_windows.ps1  build_skills_index.py  check_docs_source_links.py  contributor_audit.py  discord-voice-doctor.py  entitlements.mac.plist  install.cmd  install.ps1  install.sh  install_desktop.sh  install_spark.applescript  kill_modal.sh  make_dmg.sh  mcp_serve.py  mini_swe_runner.py  mypy_baseline.json  mypy_ratchet.py  notarize_mac.sh  preview_webui_stress.py  release.env.example  release.py  sample_and_compress.py  seed_heavy_web_session.py  setup-spark.sh  sidecar_entry.py  sign_mac_app.sh  source_hotspots.py  spark-gateway
scripts/datagen-config-examples/: example_browser_tasks.jsonl  run_browser_tasks.sh  web_research.yaml
scripts/packaging/: constraints-termux.txt
scripts/whatsapp-bridge/: allowlist.test.mjs  bridge.js  package-lock.json  package.json
skills/creative/: DESCRIPTION.md
skills/index-cache/: lobehub_index.json
skills/media/: DESCRIPTION.md
src/spark_cli/web/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src/spark_cli/web/src-tauri/capabilities/: default.json
src/spark_cli/web/src-tauri/icons/: icon.icns
src/spark_cli/web/src-tauri/loading/: agent-cursor.html  boot.js  index.html
src/spark_cli/web/src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  run_interrupt_test.py  test_batch_runner_checkpoint.py  test_browser_safety.py  test_cli_file_drop.py  test_cli_skin_integration.py  test_connectors.py  test_connectors_mcp.py  test_connectors_tool.py  test_ctx_halving_fix.py  test_desktop_gateway.py  test_empty_model_fallback.py  test_evidence_store.py  test_google_connector_bridge.py  test_google_tools.py  test_injection_guard.py  test_interrupt_redirect.py  test_ipv4_preference.py  test_mcp_serve.py  test_model_tools.py  test_model_tools_async_bridge.py  test_packaging_metadata.py  test_preview_chrome.py  test_preview_collab.py  test_preview_devloop.py  test_project_metadata.py  test_project_templates.py  test_reasoning_effort_phases.py  test_registry_pipeline.py  test_relay.py  test_session_scoped_history.py  test_slash_fuzzy_complete.py  test_spark_constants.py  test_spark_logging.py  test_spark_state.py  test_status_bar_thinking.py  test_stream_no_flicker.py  test_stream_width_guard.py  test_subprocess_home_isolation.py  test_think_command.py  (+11 more)
(+1638 files in other folders)
