[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-agent"
version = "1.2.7"
description = "The self-improving AI agent — creates skills from experience, improves them during use, and runs anywhere"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Automate Digital" }]
license = { text = "MIT" }
dependencies = [
  # Core — pinned to known-good ranges to limit supply chain attack surface
  "openai>=2.21.0,<3",
  "anthropic>=0.39.0,<1",
  "python-dotenv>=1.2.1,<2",
  "fire>=0.7.1,<1",
  "httpx[socks]>=0.28.1,<1",
  "rich>=14.3.3,<15",
  "tenacity>=9.1.4,<10",
  "pyyaml>=6.0.2,<7",
  "requests>=2.33.0,<3",  # CVE-2026-25645
  "jinja2>=3.1.5,<4",
  "pydantic>=2.12.5,<3",
  # Interactive CLI (prompt_toolkit is used directly by cli.py)
  "prompt_toolkit>=3.0.52,<4",
  # Tools
  "exa-py>=2.9.0,<3",
  "firecrawl-py>=4.16.0,<5",
  "parallel-web>=0.4.2,<1",
  "fal-client>=0.13.1,<1",
  # Text-to-speech (Edge TTS is free, no API key needed)
  "edge-tts>=7.2.7,<8",
  # Skills Hub (GitHub App JWT auth — optional, only needed for bot identity)
  "PyJWT[crypto]>=2.12.0,<3",  # CVE-2026-32597
]

[project.optional-dependencies]
modal = ["modal>=1.0.0,<2"]
daytona = ["daytona>=0.148.0,<1"]
dev = [
  "debugpy>=1.8.0,<2",
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.3.0,<2",
  "pytest-xdist>=3.0,<4",
  "pytest-cov>=4.0,<5",
  "pytest-timeout>=2.1,<3",
  "mcp>=1.2.0,<2",
  # Lint + type checking — pinned so CI and local dev stay in sync
  "ruff>=0.9.0,<1",
  "mypy>=1.13.0,<2",
]
telegram = ["python-telegram-bot[webhooks]>=22.6,<23", "aiohttp>=3.13.3,<4"]
discord = ["discord.py[voice]>=2.7.1,<3", "aiohttp>=3.13.3,<4"]
messaging = ["spark-agent[telegram]", "spark-agent[discord]", "slack-bolt>=1.18.0,<2", "slack-sdk>=3.27.0,<4"]
cron = ["croniter>=6.0.0,<7"]
slack = ["slack-bolt>=1.18.0,<2", "slack-sdk>=3.27.0,<4"]
matrix = ["mautrix[encryption]>=0.20,<1", "Markdown>=3.6,<4", "aiosqlite>=0.20", "asyncpg>=0.29"]
cli = ["simple-term-menu>=1.0,<2"]
tts-premium = ["elevenlabs>=1.0,<2"]
voice = [
  # Local STT pulls in wheel-only transitive deps (ctranslate2, onnxruntime),
  # so keep it out of the base install for source-build packagers like Homebrew.
  "faster-whisper>=1.0.0,<2",
  "sounddevice>=0.4.6,<1",
  "numpy>=1.24.0,<3",
]
pty = [
  "ptyprocess>=0.7.0,<1; sys_platform != 'win32'",
  "pywinpty>=2.0.0,<3; sys_platform == 'win32'",
]
honcho = ["honcho-ai>=2.0.1,<3"]
mcp = ["mcp>=1.2.0,<2"]
homeassistant = ["aiohttp>=3.9.0,<4"]
sms = ["aiohttp>=3.9.0,<4"]
acp = ["agent-client-protocol>=0.9.0,<1.0"]
mistral = ["mistralai>=2.3.0,<3"]
termux = [
  # Tested Android / Termux path: keeps the core CLI feature-rich while
  # avoiding extras that currently depend on non-Android wheels (notably
  # faster-whisper -> ctranslate2 via the voice extra).
  "spark-agent[cron]",
  "spark-agent[cli]",
  "spark-agent[pty]",
  "spark-agent[mcp]",
  "spark-agent[honcho]",
  "spark-agent[acp]",
]
dingtalk = ["dingtalk-stream>=0.1.0,<1"]
feishu = ["lark-oapi>=1.5.3,<2"]
web = ["fastapi>=0.104.0,<1", "uvicorn[standard]>=0.24.0,<1"]
rl = [
  "atroposlib==0.4.0",
  "tinker @ git+https://github.com/thinking-machines-lab/tinker.git",
  "fastapi>=0.104.0,<1",
  "uvicorn[standard]>=0.24.0,<1",
  "wandb>=0.15.0,<1",
]
yc-bench = ["yc-bench @ git+https://github.com/collinear-ai/yc-bench.git ; python_version >= '3.12'"]
all = [
  "spark-agent[modal]",
  "spark-agent[daytona]",
  "spark-agent[messaging]",
  # Also list telegram and discord individually so that if [messaging] fails
  # (e.g. discord.py[voice] needs native audio libs not present on a VPS),
  # each platform is retried on its own and telegram isn't silently dropped.
  "spark-agent[telegram]",
  "spark-agent[discord]",
  # matrix: python-olm (required by matrix-nio[e2e]) is upstream-broken on
  # modern macOS (archived libolm, C++ errors with Clang 21+).  On Linux the
  # [matrix] extra's own marker pulls in the [e2e] variant automatically.
  "spark-agent[matrix]; sys_platform == 'linux'",
  "spark-agent[cron]",
  "spark-agent[cli]",
  "spark-agent[dev]",
  "spark-agent[tts-premium]",
  "spark-agent[slack]",
  "spark-agent[pty]",
  "spark-agent[honcho]",
  "spark-agent[mcp]",
  "spark-agent[homeassistant]",
  "spark-agent[sms]",
  "spark-agent[acp]",
  "spark-agent[voice]",
  "spark-agent[dingtalk]",
  "spark-agent[feishu]",
  "spark-agent[mistral]",
  "spark-agent[web]",
]

[project.scripts]
spark = "spark_cli.main:main"
spark-agent = "core.run_agent:main"
spark-acp = "acp_adapter.entry:main"

[tool.setuptools.package-data]
spark_cli = ["web_dist/**/*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent", "core", "core.*", "tools", "tools.*", "spark_cli", "gateway", "gateway.*", "cron", "acp_adapter", "plugins", "plugins.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests requiring external services (API keys, Modal, etc.)",
    "slow: marks tests that take >1 second (deselect with '-m not slow')",
    "network: marks tests that hit real network endpoints",
    "serial: marks tests that cannot run in parallel (shared global state)",
]
addopts = "-m 'not integration' -n auto"
timeout = 30

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/spark_cli/web_dist/**", "src/**/__pycache__/**"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = [
    "E501",   # line too long — handled case-by-case in large files
    "B904",   # raise from inside except — gradual adoption
    "UP007",  # X | Y union syntax — requires Python 3.10+; keep Optional[] for 3.11 compat
]
per-file-ignores = {"tests/**" = ["B"]}

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true
# Incremental adoption: agent/ (strict), spark_cli/ (next wave), expand gradually
files = ["src/agent/", "src/spark_cli/"]
exclude = ["tests/", "src/tools/", "src/gateway/", "src/core/"]
