[package]
name = "spark"
version = "1.0.2"
description = "Spark desktop app"
authors = ["From the Root"]
edition = "2021"
rust-version = "1.77.1"

[lib]
name = "spark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` enables multi-webview (Window::add_child) for the native preview pane.
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
