[package]
name = "spark"
version = "1.3.1"
description = "Spark desktop app"
authors = ["From the Root"]
edition = "2021"
rust-version = "1.77.1"

[lib]
name = "spark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` enables multi-webview (Window::add_child) for the native preview pane.
# `tray-icon` enables the macOS menu-bar companion (§3.1).
# `macos-private-api` is required for the transparent click-through agent cursor overlay.
tauri = { version = "2", features = ["unstable", "tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Global hotkey to summon the quick-ask window from anywhere (§3.1).
tauri-plugin-global-shortcut = "2"
# Native OS notifications when a background turn / cron job completes (§3.2).
tauri-plugin-notification = "2"
# spark:// deep links to open a session or canvas (§3.2).
tauri-plugin-deep-link = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
